--- a/app/src/main/res/layout/activity_details.xml
+++ b/app/src/main/res/layout/activity_details.xml
@@ -22,7 +22,7 @@
             <ImageView
                 android:id="@+id/image_iv"
                 android:layout_width="match_parent"
-                android:layout_height="200dp"
+                android:layout_height="170dp"
                 android:layout_alignParentEnd="true"
                 android:layout_alignParentTop="true"
                 android:adjustViewBounds="true"
@@ -41,9 +41,9 @@
                 android:id="@+id/movie_name"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_alignParentTop="true"
                 android:layout_marginStart="12dp"
-                android:layout_marginTop="214dp"
+                android:layout_marginTop="6dp"
+                android:layout_below="@+id/image_iv"
                 android:layout_toEndOf="@+id/poster"
                 android:contentDescription="@string/movie_name_label"
                 android:maxLines="2"
