--- a/app/src/main/res/layout/fragment_trailer_item.xml
+++ b/app/src/main/res/layout/fragment_trailer_item.xml
@@ -2,21 +2,29 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:orientation="horizontal">
+    android:orientation="vertical">
 
     <RelativeLayout
-        android:id="@+id/relativeLayout"
+        android:id="@+id/relativeLayoutTrailer"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:orientation="horizontal"
+        android:orientation="vertical"
         android:layout_gravity="center">
+
+        <ImageView
+            android:id="@+id/imageViewTrailer"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_centerInParent="true"
+            android:layout_margin="10dp"
+            android:contentDescription="@string/movie_trailer" />
 
         <WebView
             android:id="@+id/webViewTrailer"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_centerInParent="true"
-            android:padding="5dp"
+            android:layout_margin="10dp"
             android:contentDescription="@string/movie_trailer" />
 
     </RelativeLayout>
