--- a/app/src/main/res/layout/fragment_review_item.xml
+++ b/app/src/main/res/layout/fragment_review_item.xml
@@ -17,6 +17,7 @@
             android:layout_height="wrap_content"
             android:layout_margin="20dp"
             android:layout_centerInParent="true"
+            android:background="@color/cardview_dark_background"
             android:padding="20dp"
             android:contentDescription="@string/movie_review" />
 
