--- a/app/src/main/res/layout/activity_details.xml
+++ b/app/src/main/res/layout/activity_details.xml
@@ -60,6 +60,17 @@
                 android:maxLines="3"
                 android:textSize="17sp" />
 
+            <Button
+                android:id="@+id/save_as_favourites"
+                android:layout_width="120dp"
+                android:layout_height="wrap_content"
+                android:layout_alignStart="@+id/movie_name"
+                android:layout_below="@+id/movie_release_date"
+                android:layout_marginTop="10dp"
+                android:contentDescription="@string/movie_rating_label"
+                android:maxLines="2"
+                android:textSize="12sp" />
+
             <TextView
                 android:id="@+id/movie_rating"
                 android:layout_width="match_parent"
