--- a/app/src/main/res/menu/menu_main.xml
+++ b/app/src/main/res/menu/menu_main.xml
@@ -12,4 +12,9 @@
         android:orderInCategory="200"
         android:title="@string/action_top_rated"
         app:showAsAction="never" />
+    <item
+        android:id="@+id/action_favourites"
+        android:orderInCategory="200"
+        android:title="@string/action_favourites"
+        app:showAsAction="never" />
 </menu>
